Completed the about section, responsiveness, and fixed all overlapping issues.

--- a/index.css
+++ b/index.css
@@ -531,7 +531,7 @@ footer .copyright .pro-links i:hover{
 
 /*About*/
 #about-home{
-    background-image: linear-gradient(rgba(9, 5, 54, 0.3),rgba(5,4,46,0.7)),url("images/about2.jpg");
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3),rgba(5,4,46,0.7)),url("images/evolve.jpg");
     width: 100%;
     height: 80vh;
     background-size: cover;
@@ -551,42 +551,33 @@ footer .copyright .pro-links i:hover{
 }
 
 #about-container{
-    display: flex;    
+    display: flex;        
     align-items: center;
-    padding: 8vw 8vw;
-    gap: 10px;
+    padding: 9vw 8vw;
+    gap: 10px; 
 
 }
 
-#about-container .about-img{
-  /*  width: 100%;*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.maina2{
+    height: 25vw;
+    width: 28vw;
+    border-radius: 10%;     
     justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-
-
-}
-
-#about-container .about-img img{
-    width: 10vw;
-    height: 10vw;
-    object-fit: cover;
-    border-radius: 50%;
-
+    padding-top: 20px;
+   
+    
 }
 
 #about-container .about-text{
-    width: 40%;
-    
+    width: 40%;    
+    padding-left: 7rem;
 
 }
 
 #about-container .about-text h2{
     color: #29303B;
     padding-bottom: 15px;
+    
 
 }
 #about-container .about-text p{
@@ -599,16 +590,10 @@ footer .copyright .pro-links i:hover{
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin-top: 30px;
+    margin-top: 10px;
 
 }
-#about-container .about-text .about-fe img{
-    width: 20px;
-    background-size: cover;
-    background-position: center;
-    margin-right: 20px;
-    border-radius: 50%;
-}
+
 
 #about-container .about-text .about-fe .fe-text{
     width: 90%;
@@ -745,3 +730,5 @@ footer .copyright .pro-links i:hover{
         margin-bottom: 20px;
     }
 }
+
+
